<resources>
    <string name="app_name">bella</string>
    <string name="google_place_API">AIzaSyBOEvLmGvSYU7RNfGA-5u_h_tTeEnpnOMQ</string>
    <string name="quoteaboutalsaili">تصميم وبرمجة السليل ويب</string>
    <string name="MakeAccount">انشاء حساب</string>
    <string name="ownerOf">صاحب منشأه</string>
    <string name="userOf">مستخدم</string>
    <string name="login">تسجيل دخـــــول</string>
    <string name="missPassword">نسيت كلمة المرور؟</string>
    <string name="remember_me">تذكرنى</string>
    <string name="IhaveNoAccount">ليس لديك حساب؟</string>
    <string name="title_activity_account_details">Account_details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_accountdetails">Accountdetails</string>
</resources>
