<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:minHeight="250dp"
    tools:context="com.example.android.bella.MainActivity">

        <com.github.rongi.rotate_layout.layout.RotateLayout
            android:id="@+id/rotateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:angle="45"
            android:layout_gravity="center|center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:id="@+id/btn_login">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/checklogin"
                    android:rotation="45"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="0dp"
                    android:rotation="45"
                    />


            </LinearLayout>
        </com.github.rongi.rotate_layout.layout.RotateLayout>
    <com.github.rongi.rotate_layout.layout.RotateLayout
        android:id="@+id/rotateLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:angle="45"
        android:layout_gravity="center"
        android:layout_marginBottom="90dp"
        android:layout_marginRight="90dp">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:id="@+id/btn_user">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:rotation="45"
                android:text="@string/MakeAccount"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:rotation="45"
                android:text="@string/userOf"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </com.github.rongi.rotate_layout.layout.RotateLayout>
    <com.github.rongi.rotate_layout.layout.RotateLayout
        android:id="@+id/rotateLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:angle="45"
        android:layout_gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="90dp"
        >

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:id="@+id/btn_Owner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:rotation="45"
                android:text="@string/MakeAccount"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:rotation="45"
                android:text="@string/ownerOf"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </com.github.rongi.rotate_layout.layout.RotateLayout>

    <TextView
        android:id="@+id/quote"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/quoteaboutalsaili"
        android:textColor="@color/colorAccent"/>


</FrameLayout>
