<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.bella.LoginActivity">

    <LinearLayout
        android:id="@+id/EditTextLinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/user1"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rememberRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditTextLinearlayout"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/missPassword"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/notify_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/white"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login_with_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberRelative"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>
